[package]
name = "elves"
description = "Utils for advent of code"
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
repository = "https://github.com/janezicmatej/elves.git"

[dependencies]
hashbrown = "0.13.1"
itertools = "0.10.5"
regex = "1.7.0"
